reset function+fixed grid dimension implemented

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 
-
+    <div>
+        <button id="resetB" class="resetButton">Reset</button>
+    </div>
 
 
     <div id="gridCont" class="gridCointainer">
