--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="slidecontainer">
+        <input type="range" min="1" max="100" value="32" class="slider" id="myRange">
+    </div>
+
 
     <div>
         <button id="resetB" class="resetButton">Reset</button>
+        <button id="resizeB" class="resizeButton">Resize</button>
     </div>
 
 
